Update videos page and add success stories image
- Fixed YouTube video embedding issues in videos.html
- Added success_stories.jpg to carousel in index.html
- Removed placeholder videos and coming soon sections
- Fixed GSAP animation visibility issues
- Added new images and SEO improvements

--- a/netlify.toml
+++ b/netlify.toml
@@ -40,8 +40,25 @@
   to = "/"
   status = 301
 
+# Sitemap redirect
+[[redirects]]
+  from = "/sitemap.xml"
+  to = "/sitemap.xml"
+  status = 200
+
 # Custom 404 page (optional)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 404
+
+# Headers for SEO
+[[headers]]
+  for = "/sitemap.xml"
+  [headers.values]
+    Content-Type = "application/xml"
+
+[[headers]]
+  for = "/robots.txt"
+  [headers.values]
+    Content-Type = "text/plain"
